--- a/myvol/workdir/views/index.pug
+++ b/myvol/workdir/views/index.pug
@@ -21,6 +21,7 @@ block content
         if user.name==='admin'
           div
           form(method='post' action=`/items/${item.id}/delete`)
+            input(type="hidden" name="_csrf" value!=csrfToken)
             button.btm-danger(type='submit') 削除する
 
   else
